<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ListActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/imageView11"
                android:layout_width="wrap_content"
                android:layout_height="260dp"
                android:layout_marginTop="-30dp"
                app:srcCompat="@drawable/lasagnes_aubergines" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAlignment="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView18"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:background="@drawable/border"
                    android:text="@string/lasagnes_name"
                    android:textAlignment="center"
                    android:textColor="@color/colorBlack"
                    android:textSize="20dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginRight="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="15dp">

                <LinearLayout
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/rectangle_jaune_arrondi"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView19"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="15dp"
                        android:layout_weight="1"
                        android:padding="5dp"
                        android:text="Difficulté"
                        android:textColor="@color/colorBlack"
                        android:textAlignment="center" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_gravity="center"
                        android:layout_marginBottom="5dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/imageView23"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_marginRight="10dp"
                            app:srcCompat="@drawable/cercle_violet" />

                        <ImageView
                            android:id="@+id/imageView24"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_marginRight="10dp"
                            app:srcCompat="@drawable/cercle_violet" />

                        <ImageView
                            android:id="@+id/imageView25"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_marginRight="10dp"
                            app:srcCompat="@drawable/cercle_violet" />

                        <ImageView
                            android:id="@+id/imageView26"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            app:srcCompat="@drawable/cercle_blanc" />
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/rectangle_violet"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView20"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:padding="10dp"
                        android:text="@string/lasagnes_time"
                        android:textAlignment="center"
                        android:textColor="@color/colorGreyWhite" />

                </LinearLayout>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView21"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/border"
                    android:text="@string/recettes_ingredients"
                    android:textSize="18dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/recette_crud"
                    android:layout_marginLeft="10dp"
                    android:layout_marginBottom="10dp"
                    android:textSize="10sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="115dp"
                android:orientation="vertical">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:textAlignment="center">

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/addBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="150dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginEnd="0dp"
                    android:layout_marginBottom="2dp"
                    android:backgroundTint="#FFEB3B"
                    android:src="@drawable/ic_action_add"
                    app:backgroundTint="#FFEB3B"
                    app:fabSize="mini" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView33"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/border"
                    android:text="@string/recettes_howdo"
                    android:textSize="18dp"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView42"
                        android:layout_width="25dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/border"
                        android:text="@string/recettes_howdo1"
                        android:textSize="20dp" />

                    <TextView
                        android:id="@+id/textView41"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="9dp"
                        android:layout_weight="1"
                        android:paddingBottom="5dp"
                        android:text="@string/lasagnes_howdo1"
                        android:textColor="@color/colorBlack" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="15dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView43"
                        android:layout_width="25dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/border"
                        android:text="@string/recettes_howdo2"
                        android:textSize="20dp" />

                    <TextView
                        android:id="@+id/textView40"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="9dp"
                        android:layout_weight="1"
                        android:paddingBottom="5dp"
                        android:text="@string/lasagnes_howdo2"
                        android:textColor="@color/colorBlack" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="15dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView44"
                        android:layout_width="25dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/border"
                        android:text="@string/recettes_howdo3"
                        android:textSize="20dp" />

                    <TextView
                        android:id="@+id/textView45"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="9dp"
                        android:layout_weight="1"
                        android:paddingBottom="5dp"
                        android:text="@string/lasagnes_howdo3"
                        android:textColor="@color/colorBlack" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="15dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView47"
                        android:layout_width="25dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/border"
                        android:text="@string/recettes_howdo4"
                        android:textSize="20dp" />

                    <TextView
                        android:id="@+id/textView46"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="9dp"
                        android:layout_weight="1"
                        android:paddingBottom="25dp"
                        android:text="@string/lasagnes_howdo4"
                        android:textColor="@color/colorBlack" />
                </LinearLayout>




            </LinearLayout>

        </LinearLayout>




    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>

